--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <main class="catalogo-container">
-
+        <h1>Deslize hacia abajo para ver todo el catalogo</h1>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
