--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -26,9 +26,14 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonomica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
@@ -44,25 +49,35 @@
                     Consultar por WhatsApp
                 </a>
             </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
+            </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/sofa-gris.jpg"
-                     alt="Sofá de 3 cuerpos"
+                     alt="Sofï¿½ de 3 cuerpos"
                      data-fullsrc="img/sofa-gris-hd.jpg">
             </div>
             <div class="producto-info">
                 <h2 class="producto-nombre">Sofa Nordico 3 Cuerpos</h2>
                 <p class="producto-precio">Precio a consultar</p>
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20el%20Sofá%20Nórdico" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20el%20Sofï¿½%20Nï¿½rdico" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -70,15 +85,20 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -86,15 +106,20 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -102,15 +127,20 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -118,15 +148,20 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -134,15 +169,20 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
+            </div>
+            <div class="scroll-prompt">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
             </div>
         </section>
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -150,7 +190,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -158,7 +198,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -166,7 +206,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -174,7 +214,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -182,7 +222,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -190,7 +230,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -198,7 +238,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -206,7 +246,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -214,7 +254,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -222,7 +262,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -230,7 +270,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -238,7 +278,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -246,7 +286,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -254,7 +294,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -262,7 +302,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
@@ -270,7 +310,7 @@
         <section class="producto-card">
             <div class="producto-imagen">
                 <img src="img/silla-gamer.jpg"
-                     alt="Silla Gamer Ergonómica"
+                     alt="Silla Gamer Ergonï¿½mica"
                      data-fullsrc="img/silla-gamer-hd.jpg">
             </div>
             <div class="producto-info">
@@ -278,7 +318,7 @@
 
                 <p class="producto-precio">$85.000</p>
 
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonómica" class="producto-wsp" target="_blank">
+                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonï¿½mica" class="producto-wsp" target="_blank">
                     Consultar por WhatsApp
                 </a>
             </div>
