--- a/index.html
+++ b/index.html
@@ -13,93 +13,7 @@
 </head>
 <body>
 
-    <main class="catalogo-container">
-        <section class="producto-card">
-            <div class="producto-imagen">
-                <img src="Silla.png"
-                     alt="Silla"
-                     data-fullsrc="Silla.png">
-            </div>
-            <div class="producto-info">
-                <h2 class="producto-nombre">Silla</h2>
-
-                <p class="producto-precio">$85.000</p>
-
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonomica" class="producto-wsp" target="_blank">
-                    Consultar por WhatsApp
-                </a>
-            </div>
-            <div class="scroll-prompt">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
-            </div>
-        </section>
-        <section class="producto-card">
-            <div class="producto-imagen">
-                <img src="SillaRueditas.png"
-                     alt="Silla con ruedas"
-                     data-fullsrc="SillaRueditas.png">
-            </div>
-            <div class="producto-info">
-                <h2 class="producto-nombre">Silla con ruedas</h2>
-
-                <p class="producto-precio">$85.000</p>
-
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonomica" class="producto-wsp" target="_blank">
-                    Consultar por WhatsApp
-                </a>
-            </div>
-            <div class="scroll-prompt">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
-            </div>
-        </section>
-        <section class="producto-card">
-            <div class="producto-imagen">
-                <img src="Lampara.png"
-                     alt="Lampara"
-                     data-fullsrc="Lampara.png">
-            </div>
-            <div class="producto-info">
-                <h2 class="producto-nombre">Lampara</h2>
-
-                <p class="producto-precio">$85.000</p>
-
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonomica" class="producto-wsp" target="_blank">
-                    Consultar por WhatsApp
-                </a>
-            </div>
-            <div class="scroll-prompt">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
-            </div>
-        </section>
-        <section class="producto-card">
-            <div class="producto-imagen">
-                <img src="Portavasos.png"
-                     alt="Portavasos"
-                     data-fullsrc="Portavasos.png">
-            </div>
-            <div class="producto-info">
-                <h2 class="producto-nombre">Portavasos</h2>
-
-                <p class="producto-precio">$85.000</p>
-
-                <a href="https://wa.me/+5493415487108?text=Hola!%20Me%20interesa%20la%20Silla%20Gamer%20Ergonomica" class="producto-wsp" target="_blank">
-                    Consultar por WhatsApp
-                </a>
-            </div>
-            <div class="scroll-prompt">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
-            </div>
-        </section>
-
-    </main>
+    <main class="catalogo-container"></main>
 
     <div id="lightbox" class="lightbox">
         <span class="lightbox-cerrar">&times;</span>
