--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="lightbox-contenido" id="lightbox-img">
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" charset="UTF-8"></script>
 
 </body>
 </html>
